--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+	<title>Covarrubias | Home</title>
+	<link rel="stylesheet" type="text/css" href="css/nav-style.css">
+	<link rel="stylesheet" type="text/css" href="css/section-style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
+
+</head>
+
+<body>
+	<!-- Navigation Bar -->
+	<header><nav>
+		<div class="nav-logo">
+			<img src="img/name.png">
+		</div>
+		<div class="nav-menu">
+			<a class="active" href="index.html">Home</a>
+			<a href="academia.html">Academia</a>
+			<a href="blog.html">Blog</a>
+			<a href="projects.html">Projects</a>
+		</div>
+	</nav></header>
+
+	<!-- Profile, Biography, Social Links -->
+	<section>
+		<div class="profile">
+			<div class="left">
+				<h1>Saul Gabriel Covarrubias</h1>
+			</div>
+			<div class="left">
+				<img src="img/profile-portrait.jpg">
+			</div>
+			<div class="left">
+				<h2>PhD Student</h2>
+			</div>
+			<div class="left">
+				<h3>Department of Mathematics</h3>
+			</div>
+			<div class="left">
+				<h3>The University of Texas at Arlington</h3>
+			</div>
+			<div class="left">
+				<a href="files/Resume.pdf"><button>Download Resume</button></a>
+			</div>
+		</div>
+		<div class="biography">
+			<div class="right">
+				<h2>Biography</h2>
+				<div class="text-area">
+					My name is Saul Gabriel Covarrubias, I am 24 years old, and a graduate teaching assistant in the Mathematics Department at the University of Texas at Arlington. I am in my third year as a PhD student.
+				</div>
+			</div>
+			<div class="right">
+				<h2>Interest</h2>
+				<ul>
+					<li>Convex Optimization</li>
+					<li>Numerical Linear Algebra</li>
+					<li>Scientific Computing</li>
+					<li>EEG Source Localization</li>
+					<li>Data Science</li>
+				</ul>
+			</div>
+			<div class="right">
+				<h2>Education</h2>
+				<ul>
+					<li><strong>Ph.D., Mathematics, 2021</strong><br>
+						The University of Texas, Arlington</li><br>
+					<li><strong>B.S., Applied Mathematics, 2017</strong><br>
+						California State Polytechnic University, Pomona</li>
+					
+				</ul>
+			</div>
+		</div>
+		<div class="social-links">
+			<div class="right">
+				<a href="mailto:saul.covarrubias@mavs.uta.edu">
+					<i class="fa fa-envelope fa-2x"></i></a>
+			</div>
+			<div class="right">
+				<a href="https://www.linkedin.com/in/scovarrubias/">
+					<i class="fab fa-linkedin fa-2x"></i></a>
+			</div>
+			<div class="right">
+				<a href="https://github.com/saulcov">
+					<i class="fab fa-github-square fa-2x"></i></a>
+			</div>
+		</div>
+
+
+	</section>
+
+</body>
+
+</html>
